# sharc

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  RelativePermeabilityPowerLawType_law.h.bkup  configure  configure.bat  libraries.xml
CMake/: FindHWLOC.cmake  FindMetis.cmake  (+2 more)
common/ArcGeoSim/: CMakeLists.txt  arcgeosim_config.h.in  arcgeosim_version.h.in  changelog.md  version
common/ArcGeoSim/model/: ArcaneApplicationModel.uml  ArcaneApplicationModel.umlcomp  ArchitectureModel.umlclass  FluidSystem.umlclass  FluxModel.umlclass  MultiPhaseFlowModel.umlclass  NonLinearSystemOperator.umlclass
common/ArcGeoSim/src/Main/: CMakeLists.txt  main.cc
common/ArcGeoSim/test/: Alien.txt  AnyItem.txt  AppService.txt  AuDi.txt  Authors.txt  CMakeLists.txt  DivKGradTwoPointsService.txt  Expressions.txt  GenericItemExtractor.txt  Gump.txt  Interpolator.txt  LUSolver.txt  Law.txt  LinearAlgebra2.txt  MakeDelegatedPtr.txt  ModuleMaster.txt  MultiThreadNonLinearTest.txt  NNInference.txt  ObservableProperty.txt  Partitioner.txt  StrongOptions.txt
common/ArcGeoSim/test/ServiceTests/: ArcEOR.config  ArcGeoSim.config  ArcaDES.config  ArcaneDemo.config  CATSArcane.config  CooresArcane.config  FraXim.config  Geoxim.config  ShArc.config
src/CAWF/PreCICE/: CMakeLists.txt  config.xml
src/CAWF/PreCICE/Compaction/: Compaction.axl  CompactionModule.h  config.xml
src/CAWF/PreCICE/DynamicMeshMng/: DynamicMeshMng.axl  DynamicMeshMngService.cc  IDynamicMeshMng.h  config.xml
src/CAWF/PreCICE/Elasticity/: BodyForce.h  ElementMatrix.h  ElementMatrixHexQuad.h  Fem.axl  FemModule.cc  FemModule.h  config.xml
src/CAWF/PreCICE/FEMUtils/: CMakeLists.txt  CMakeLists.txt.orig  config.xml
test/: Authors.txt  CMakeLists.txt
test/CAWF/: README.md  precice-config-evol-v3.xml  precice-config-iter-v3.xml  precice-config-v3.xml
test/CAWF/Compaction/: Compaction-cube-cawf-evol.arc  Compaction-cube-cawf.arc  Compaction-cube.arc  Compaction-northsea-evol.arc  Compaction-northsea.arc  Compaction-ring.arc  Compaction-synth-basin.arc  ShArc.config  cube1.vt2  cube2.vt2  cube4.vt2  cube5.vt2
test/CAWF/Compaction/meshes/: cube1.vt2  cube2.vt2  cube4.vt2
test/CAWF/MecaFEM/: 3D.dirichlet.bodyforce.hexa.arc  mecafem-cube-cawf-evol.arc  mecafem-cube-cawf.arc  mecafem-cube-hexa-acc.arc  mecafem-cube-hexa-hypre-acc.arc  mecafem-cube-hexa-hypre.arc  mecafem-cube-hexa.arc  mecafem-cube.arc  mecafem-northsea-evol.arc  mecafem-northsea.arc
test/CAWF/MecaFEM/meshes/: cube3.vt2  north_sea_evol_mesh11.msh  north_sea_evol_mesh16.msh  north_sea_evol_mesh17.msh  north_sea_evol_mesh18.msh  north_sea_evol_mesh19.msh  north_sea_evol_mesh20.msh  north_sea_evol_mesh24.msh  north_sea_evol_mesh25.msh  north_sea_evol_mesh26.msh  north_sea_evol_mesh7.msh
test/CAWF/Poisson/: ShArc.config  sphere.3D.arc
test/CAWF/meshes/: cube2.vt2  cube3.vt2  cube5.vt2  cubeN2.vt2  north_sea_evol_mesh1.msh  north_sea_evol_mesh10.msh  north_sea_evol_mesh12.msh  north_sea_evol_mesh13.msh  north_sea_evol_mesh14.msh  north_sea_evol_mesh15.msh  north_sea_evol_mesh2.msh  north_sea_evol_mesh21.msh  north_sea_evol_mesh22.msh  north_sea_evol_mesh23.msh  north_sea_evol_mesh3.msh  north_sea_evol_mesh4.msh  north_sea_evol_mesh5.msh  north_sea_evol_mesh6.msh  north_sea_evol_mesh8.msh  north_sea_evol_mesh9.msh
test/ExaDiBench/: ExaDiBench.arc  README.md  ShArc.config  bench-cube3d-meshb.arc  bench-cube3d.arc  bench-meshb.arc  bench-pb-msh.arc  bench-pb.arc  bench-ring-msh.arc  bench-spe11c-structured.arc  bench-spe11c.arc  cube3D1.vt2  sharc.config  spe11c.vtk  spe11c_structured.arc  unit_cube_1k.meshb
test/LargeScaleTwoPhaseFlowSimulation/: README.md  ShArc.config  genPNXY.py  new-use-case-two-phase-flow-capi-short-IFPSolver-100x100x10-dt5-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  new-use-case-two-phase-flow-capi-short-IFPSolver-128x128x10-6hdt-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  new-use-case-two-phase-flow-capi-short-IFPSolver-2048x2048x10-dt5-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  new-use-case-two-phase-flow-capi-short-MCGSolver-128x128x10-6hdt-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  new-use-case-two-phase-flow-capi-short-MCGSolver-2048x2048x10-dt5-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  new-use-case-two-phase-flow-capi-short-MCGSolverGPU-128x128x10-6hdt-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  new-use-case-two-phase-flow-capi-short-MCGSolverGPU-2048x2048x10-dt5-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  new-use-case-two-phase-flow-short-IFPSolver-2048x2048x10-dt10-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  new-use-case-two-phase-flow-short-MCGSolver-2048x2048x10-dt10-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  new-use-case-two-phase-flow-short-MCGSolverGPU-2048x2048x10-dt10-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc  use-case-two-phase-flow-IFPSolver-2048x2048x10-dt10-nsd-__NPX__x__NPY__x__NPZ__-__NP__p.arc
test/ThermoChemicalConvection/: README.md  ShArc.config  mesh-10x1x10.vt2  use-case-thermal.arc
test/TwoPhaseFlowSimulation/: ArcaneDemo.config  Demonstrator.config  README.md  RefUseCaseTwoPhaseFlow_DebugNewtonMatrix_1_1.txt  RefUseCaseTwoPhaseFlow_DebugNewtonVector_1_1.txt  SPE10-mesh-level0.vt2  mesh-10x1x1.vt2  mesh-well.vt2  use-case-two-phase-flow-spe10-bcgs-cxr-sycl.arc  use-case-two-phase-flow-spe10-bcgs-cxr.arc  use-case-two-phase-flow-spe10-bcgs-ilu0.arc  use-case-two-phase-flow-spe10-hts-bcgs-cpr.arc  use-case-two-phase-flow-spe10-hts-bcgs-ilu0.arc  use-case-two-phase-flow-spe10-hypre-bcgs-ilu0.arc  use-case-two-phase-flow-spe10-ifps-bcgs-cpr.arc  use-case-two-phase-flow-spe10-ifps-bcgs-ilu0.arc  use-case-two-phase-flow-spe10-mcgs-bcgs-cpr.arc  use-case-two-phase-flow-spe10-mcgs-bcgs-ilu0.arc  use-case-two-phase-flow-spe10-mcgsgpu-bcgs-cpr.arc  use-case-two-phase-flow-spe10-petsc-bcgs-ilu0.arc  use-case-two-phase-flow-spe10-tri-bcgs-ilu0.arc  use-case-two-phase-flow-spe10-well.arc  use-case-two-phase-flow-spe10.arc  use-case-two-phase-flow-well.arc  use-case-two-phase-flow-with-capillary-pressure.arc  use-case-two-phase-flow.arc
test/gTest/: CMakeLists.txt  gtest_RelativePermeabilityPowerLaw.cpp  gtest_main.cpp
(+13232 files in other folders)
